--- a/configs/iw-24.config
+++ b/configs/iw-24.config
@@ -813,6 +813,7 @@ CONFIG_OPENSSL_WITH_MDC2=y
 CONFIG_OPENSSL_WITH_WHIRLPOOL=y
 CONFIG_OPENSSL_ENGINE=y
 CONFIG_PACKAGE_libopenssl-conf=y
+CONFIG_PACKAGE_libopenssl-legacy=y
 CONFIG_WOLFSSL_HAS_AES_CCM=y
 CONFIG_WOLFSSL_HAS_CHACHA_POLY=y
 CONFIG_WOLFSSL_HAS_DH=y
@@ -1007,6 +1008,7 @@ CONFIG_PACKAGE_bind-dig=y
 CONFIG_PACKAGE_chinadns-ng=y
 CONFIG_PACKAGE_ddns-go=y
 CONFIG_PACKAGE_ddns-scripts=y
+CONFIG_PACKAGE_ddns-scripts-cloudflare=y
 CONFIG_PACKAGE_ddns-scripts-services=y
 CONFIG_PACKAGE_knot-resolver_dnstap=y
 CONFIG_PCAP_DNSPROXY_LIBPCAP=y
@@ -1036,6 +1038,7 @@ CONFIG_PACKAGE_uhttpd=y
 CONFIG_PACKAGE_uhttpd-mod-ubus=y
 CONFIG_PACKAGE_acme=y
 CONFIG_PACKAGE_acme-acmesh=y
+CONFIG_PACKAGE_acme-acmesh-dnsapi
 CONFIG_PACKAGE_acme-common=y
 CONFIG_PACKAGE_ethtool=y
 CONFIG_PACKAGE_iputils-arping=y
